syntax = "proto3";
package customer.v1;

import "common/v1/types.proto";

service CustomerService {
  rpc CreateCustomer(CreateCustomerRequest) returns (Customer);
  rpc GetCustomer(GetCustomerRequest) returns (Customer);
  rpc ListCustomers(ListCustomersRequest) returns (ListCustomersResponse);
  rpc UpdateCustomer(UpdateCustomerRequest) returns (Customer);
  rpc DeleteCustomer(DeleteCustomerRequest) returns (DeleteCustomerResponse);
  rpc AddVehicle(AddVehicleRequest) returns (Vehicle);
  rpc GetVehicle(GetVehicleRequest) returns (Vehicle);
  rpc ListVehiclesByCustomer(ListVehiclesByCustomerRequest) returns (ListVehiclesResponse);
  rpc UpdateVehicle(UpdateVehicleRequest) returns (Vehicle);
}

message Customer {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string address_line1 = 6;
  string address_line2 = 7;
  string city = 8;
  string postal_code = 9;
  string country = 10;
  string company_name = 11;
  string vat_number = 12;
  repeated Vehicle vehicles = 13;
  string created_at = 14;
  string updated_at = 15;
}

message Vehicle {
  string id = 1;
  string customer_id = 2;
  string make = 3;
  string model = 4;
  int32 year = 5;
  string vin = 6;
  string license_plate = 7;
  int32 mileage_km = 8;
  string color = 9;
  string engine_type = 10; // petrol, diesel, electric, hybrid
  string created_at = 11;
  string updated_at = 12;
}

message CreateCustomerRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone = 4;
  string address_line1 = 5;
  string address_line2 = 6;
  string city = 7;
  string postal_code = 8;
  string country = 9;
  string company_name = 10;
  string vat_number = 11;
}

message GetCustomerRequest { string id = 1; }

message ListCustomersRequest {
  common.v1.Pagination pagination = 1;
  string search_query = 2;
}

message ListCustomersResponse {
  repeated Customer customers = 1;
  common.v1.PaginationResult pagination = 2;
}

message UpdateCustomerRequest {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string address_line1 = 6;
  string address_line2 = 7;
  string city = 8;
  string postal_code = 9;
  string country = 10;
  string company_name = 11;
  string vat_number = 12;
}

message DeleteCustomerRequest { string id = 1; }
message DeleteCustomerResponse { bool success = 1; }

message AddVehicleRequest {
  string customer_id = 1;
  string make = 2;
  string model = 3;
  int32 year = 4;
  string vin = 5;
  string license_plate = 6;
  int32 mileage_km = 7;
  string color = 8;
  string engine_type = 9;
}

message GetVehicleRequest { string id = 1; }
message ListVehiclesByCustomerRequest { string customer_id = 1; }
message ListVehiclesResponse { repeated Vehicle vehicles = 1; }

message UpdateVehicleRequest {
  string id = 1;
  string customer_id = 2;
  string make = 3;
  string model = 4;
  int32 year = 5;
  string vin = 6;
  string license_plate = 7;
  int32 mileage_km = 8;
  string color = 9;
  string engine_type = 10;
}
